--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # (string) Title of your wiki
-title: 
+title: Genshin Impact Theorycrafting Wiki
 # (string) Description of your wiki
-description: 
+description: A test wiki that should be used as a proof of concept to display the brevity of information from various TC Libraries.
 # (boolean) Enable/disable wiki page list in sidebar
 show_wiki_pages: true
 # (integer) Maximum number of wiki page to shown in sidebar
@@ -21,7 +21,7 @@ show_downloads: true
 # (string) Specify branch rendered by gitpages allowing wiki tool buttons to work
 git_branch: "master"
 # (string) Url of logo image, it can be full, absolute or relative.
-logo_url: 
+logo_url: assets/images/test.png
 # (string) The UA-XXXXX-Y code from google analytic to enable GA on your wiki
 google_analytics: 
 # (string) folder where wiki pages are stored, it's needed for tool buttons
